--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "lil-gui": "^0.16.1",
     "three": "^0.141.0",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "firebase": "^10.3.0"
   }
 }
